# binary-node

./: .gitignore  CLAUDE.md  Dockerfile  HANDOVER.md  MAINNET_GETH_BLOCK  README.md  binary-node.service  catch-up-loop.sh  catch-up-validate.sh
docs/: README.md  architecture.md  audit_1_24_06.md  design-rationale.md  replication.md
docs/reference/: README.md
planning/: README.md
planning/iteration_1/: 01_questions.md  02_answers.md
planning/iteration_2/: 01_branch_findings.md  02_q3_recommendation.md  03_execution_plan.md  04_preimage_path_findings.md  05_options_reconsidered.md  06_STATUS_resume_here.md
planning/iteration_3/: 01_snapshot_findings.md  02_options_reconsidered.md  03_ethrex_migrate_findings.md  04_reth_schema_findings.md  05_extractor_design.md  06_gethdump_format.md  07_CRITICAL_reth_has_no_preimages.md  08_CRITICAL_geth_preimages_incomplete.md  10_STATUS_resume_here.md
planning/iteration_4a_ethrex/: 01_xatu_preimage_plan.md  02_eli5_explainer.md  03_decided_approach.html  03_decided_approach.md  04_execution_log.md
planning/iteration_4b_geth/: 00_README.md  01_geth_eip7864_findings.md
planning/iteration_5/: 01_status_feed.md  (+2 more)
preimage-builder/: Cargo.toml
reth-state-extractor/: Cargo.toml
reth-state-extractor/src/: main.rs
snapshot-resorter/: Cargo.toml  resort-monitor.sh
utils/: host_key  host_key.pub  jwt.hex  syncwatch.sh
xatu-preimages/: build_addrs_distinct.sh  build_preimages.py  build_slots_distinct.sh  distinct.sql  distinct_addrs.sql  distinct_slots.sql  download_xatu.py  launch_slots.sh  test.sql  validate_parquet.py
(+2 files in other folders)
